overflow on mobile fixed

--- a/style.css
+++ b/style.css
@@ -179,13 +179,13 @@ main .fish-image{
         transform: translateX(0) translateY(0) scaleX(1); /* Start and end position */
     }
     50% {
-        transform: translateX(95vw) translateY(100px) scaleX(1); /* Move to the right */
+        transform: translateX(100vw) translateY(250px) scaleX(1); /* Move to the right */
     }
     50.1% {
         transform: scaleX(-1); /* Immediate flip without translation */
     }
     50.2%, 50.8% {
-        transform: translateX(-95vw) translateY(0) scaleX(-1); /* Final position after flip */
+        transform: translateX(-100vw) translateY(0) scaleX(-1); /* Final position after flip */
     }
     100%{
         transform: translateX(0px) translateY(0px) scale(1);
@@ -309,9 +309,8 @@ main .fish-image{
     
     .message{
         height: 45vh;
-        width: 90vw;
+        width: 70vw;
         position: relative;
-        left: 5%;
         top: 10rem;
         transition: margin-left 0.5s ease-in-out;
     }
@@ -322,6 +321,44 @@ main .fish-image{
         font-family:"JetBrains Mono", serif;
         max-width: 100%;
     }
+
+    
+@keyframes swim-right {
+    0%, 100% {
+        transform: translateX(0) translateY(0) scaleX(1); /* Start and end position */
+    }
+    50% {
+        transform: translateX(100vw) translateY(250px) scaleX(1); /* Move to the right */
+    }
+    50.1% {
+        transform: scaleX(-1); /* Immediate flip without translation */
+    }
+    50.2%, 50.8% {
+        transform: translateX(-100vw) translateY(0) scaleX(-1); /* Final position after flip */
+    }
+    100%{
+        transform: translateX(0px) translateY(0px) scale(1);
+    }
+}
+
+@keyframes swim-left {
+    0%, 100% {
+        transform: translateX(0) translateY(0) scaleX(1); /* Start and end position */
+    }
+    50% {
+        transform: translateX(-100vw) translateY(150px) scaleX(-1); /* Re-enter from the right */
+    }
+    50.1%{
+        transform: scale(1);
+    }
+    50.2%, 50.3% {
+        transform: translateX(100vw) translateY(50px) scaleX(1); /* Swim back to the left */
+    }
+    100%{
+        transform: translateX(0px) translateY(0px) scale(1);
+    }
+}
+
 }
 
 @media screen and (min-width: 769px) and (max-width: 1019px){
